# T1-SkiFreee

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md  skifree.cpp
include/: audio.h  enemy.h  game.h  obstacle.h  player.h  utils.h
include/models/: game_objects.h  models.h  player.h
include/obstacles/: accel.h  deaccel.h  flag.h  rock.h  tree.h
source/: CMakeLists.txt  audio.cpp  enemy.cpp  game.cpp  models.cpp  player.cpp  utils.cpp
source/obstacles/: accel.cpp  deaccel.cpp  flag.cpp  rock.cpp  tree.cpp
src/: CMakeLists.txt  game.cpp  models.cpp
